# Tellus

./: Cargo.toml  README.md
model/: Cargo.toml
model/src/: api_call.rs  lib.rs
prompts/: weather_prompt.txt
src/: main.rs
