[package]
name = "UkonTakeHome"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "model"
]

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
reqwest = "0.12.15"
rig-core = "0.12.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
model = { path = "./model"}
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true